syntax = "proto3";

option  go_package = "./pb";
package monitor;

message Process{
  string process = 1;
    string args = 2;
}
message Event{
  string psUid = 1;
  string filter = 2;
  string text = 3;
}

message RegisterRequest{
  Process process = 1;
}

message RegisterResponse{
  string psUid = 2;
}

message SubscribeRequest{
  int32 command = 1;
  string psId = 2;
  string term = 3;
}

message SubscribeResponse{

}

service ProcessMonitor{
  rpc RegisterProcess (RegisterRequest) returns (RegisterResponse);
  rpc Subscribe(SubscribeRequest) returns (SubscribeResponse);
}
